--- a/Module_2/prefolio/prefolio/style.css
+++ b/Module_2/prefolio/prefolio/style.css
@@ -35,3 +35,15 @@ h3{
 strong{
     color: white;
 }
+
+#link{
+    color: black;
+}
+
+#link:visited{
+    color: blue;
+}
+
+#link:hover{
+    color: purple;
+}
