--- a/Module_2/prefolio/prefolio/styling/style.css
+++ b/Module_2/prefolio/prefolio/styling/style.css
@@ -47,3 +47,15 @@ strong{
 #link:hover{
     color: purple;
 }
+
+@media(max-width: 768px){
+    .video{
+        display: none;
+    }
+}
+
+@media(min-width: 768px){
+    .video{
+        display: block;
+    }
+}
