--- a/Module_3/Deel_1/Python/GUI/wedstrijdteller/wedstrijdteller.css
+++ b/Module_3/Deel_1/Python/GUI/wedstrijdteller/wedstrijdteller.css
@@ -4,6 +4,11 @@ body {
   font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
+h2{
+  text-align: right;
+  font-size: 25px;
+}
+
 #input-teams{
   padding: 10px;
   background-color: palegoldenrod;
@@ -65,3 +70,15 @@ body {
   font-size: 24px;
 }
 
+#counterTeam1Sets{
+  text-align: right;
+}
+
+#counterTeam2Sets{
+  text-align: right;
+}
+
+.teamsets{
+  text-align: right;
+  font-size: 20px;
+}
