--- a/Module_3/sushi_go/style_sushi.css
+++ b/Module_3/sushi_go/style_sushi.css
@@ -31,3 +31,10 @@ h1 {
     display: none;
     margin-top: 20px;
 }
+
+@media (max-width: 10px) {
+    .sushi-image {
+        margin-bottom: 5px; 
+        display: block; 
+    }
+}
